# department-console

./: .dockerignore  .env.example  Dockerfile  README.md  SECURITY_AUDIT.md  docker-compose.yml  pyproject.toml  service.ipynb  setup.cfg
app/: __init__.py  app.py  config.py  models.py
app/data/analytic/: data.csv  organizations.csv
app/data/regions/: Adygeya.geojson  Altay.geojson  Altayskiy_kray.geojson  Amurskaya.geojson  Arkhangel_skaya.geojson  Astrakhanskaya.geojson  Bashkortostan.geojson  Belgorodskaya.geojson  Bryanskaya.geojson  Buryatiya.geojson  Chechenskaya.geojson  Chelyabinskaya.geojson  Chukotskiy.geojson  Chuvashskaya.geojson  Dagestan.geojson  Donetska.geojson  Ingushskaya.geojson  Irkutskaya.geojson  Ivanovskaya.geojson  Kabardino-Balkarskaya.geojson  Kaliningradskaya.geojson  Kalmykiya.geojson  Kaluzhskaya.geojson  Karachayevo-Cherkesskaya.geojson  Kareliya.geojson  Kemerovo.geojson  Khabarovskiy-kray.geojson  Khakasiya.geojson  Khanty-Mansiyskiy.geojson  Khersonska.geojson  Kirovskaya.geojson  Komi.geojson  Kostromskaya.geojson  Krasnodarskiy-kray.geojson  Krasnoyarskiiy-kray.geojson  Kurganskaya.geojson  Kurskaya.geojson  Leningradskaya.geojson  Lipetskaya.geojson  Luhanska.geojson  (+47 more)
app/data/regions/config/: regions_names.json
app/pages/: home.py  region.py
app/services/: csv_loader.py  data_loader.py  geojson_loader.py
tests/: test_asgi_app.py  test_data_loader.py  test_map_renderer.py
