[project]
name = "dashbord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=3.3.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pydeck>=0.9.1",
    "python-dotenv[dash]>=1.2.1",
    "streamlit-folium>=0.25.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
    "wemake-python-styleguide>=0.19.2",
]

[tool.pytest]
testpaths = ["tests"]
